2006-04-26 Tim Perdue <tim@gforgegroup.com>

	* fixed a bug in artifactfactory where arrays were being saved and creating
	an unsolvable problem and broken sql query.


2006-04-20 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : use a parameter instead of hardcoded admin address
		https://gforge.org/tracker/?func=detail&aid=2251&group_id=1&atid=106
	* Applied patch : Add Time Entry to SOAP interface
		https://gforge.org/tracker/?func=detail&aid=2182&group_id=1&atid=106
	* Applied patch : Correction for French.tab
		https://gforge.org/tracker/?func=detail&aid=2115&group_id=1&atid=106
	* Applied patch : tracker.php lacks a "break" in downloadcsv clause
		https://gforge.org/tracker/?func=detail&aid=1873&group_id=1&atid=106
	* Applied patch : Mails cannot be sent when using php safe_mode
		https://gforge.org/tracker/?func=detail&aid=1810&group_id=1&atid=106

2006-04-17 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Many fixes for massmail.php
		http://gforge.org/tracker/?func=detail&aid=2255&group_id=1&atid=106

2006-04-01 Tim Perdue   <tim@gforgegroup.com>

	* purging unused strings and unmaintained language files 

2006-03-27 Daniel Perez <daniel@gforgegroup.com>
	* Fixed bug : Capital letters with "stress marks" are wrong in language/Spanish.tab
		http://gforge.org/tracker/?func=detail&aid=2099&group_id=1&atid=105

2006-03-20 Daniel Perez <daniel@gforgegroup.com>
	* Applied patch : Fixes bug in tracker template upload
		http://gforge.org/tracker/?func=detail&aid=2000&group_id=1&atid=106
	* Applied patch : Plugin manager forgets to report problems, and should tell more about db init errors
		http://gforge.org/tracker/?func=detail&aid=1964&group_id=1&atid=106
	* Applied patch : updated italian.tab
		http://gforge.org/tracker/?func=detail&aid=1921&group_id=1&atid=106		
	* Applied patch : updated chinese.tab	
		http://gforge.org/tracker/?func=detail&aid=1907&group_id=1&atid=106
	* Applied patch : Artifact::create() looses sql error on insertion